@@ -45,6 +45,7 @@ typedef struct Alt	Alt;
 typedef struct Channel	Channel;
 typedef struct Progq	Progq;
 typedef struct Import	Import;
+typedef struct ILock	ILock;
 typedef struct Inst	Inst;
 typedef struct Module	Module;
 typedef struct Modlink	Modlink;
@@ -65,6 +66,13 @@ typedef struct Atidle	Atidle;
 typedef struct Altc	Altc;
 typedef struct Except Except;
 typedef struct Handler Handler;
+
+struct ILock
+{
+	int	lk;
+	int	pid;
+	void*	ql;
+};
 
 struct Frame
 {
@@ -403,6 +411,8 @@ extern	void		destroylinks(Module*);
 extern	void		destroystack(REG*);
 extern	void		drawmodinit(void);
 extern	int		dynldable(int);
+extern	void		iqlock(ILock*);
+extern	void		iqunlock(ILock*);
 extern	void		loadermodinit(void);
 extern	Type*		dtype(void (*)(Heap*, int), int, uchar*, int);
 extern	Module*		dupmod(Module*);
